--- a/src/main/resources/dronetelemetrytool/fxml/circle180GaugeCreator_view.fxml
+++ b/src/main/resources/dronetelemetrytool/fxml/circle180GaugeCreator_view.fxml
@@ -30,7 +30,37 @@
                     <alignment>CENTER</alignment>
                     <text>Circle 180 Gauge</text>
                 </Label>
-
+                <HBox>
+                    <Region prefHeight="28" prefWidth="88" />
+                    <Region prefHeight="28" prefWidth="150" styleClass="blue" />
+                    <Region prefHeight="28" prefWidth="150" styleClass="green" />
+                    <Region prefHeight="28" prefWidth="150" styleClass="yellow" />
+                    <Region prefHeight="28" prefWidth="150" styleClass="red" />
+                    <Region prefHeight="28" prefWidth="88" />
+                </HBox>
+                <HBox>
+                    <Region prefHeight="28" prefWidth="38.0" />
+                    <Label alignment="CENTER" prefHeight="28.0" prefWidth="100.0" textAlignment="RIGHT">
+                        <text>Minimum</text>
+                        <padding> <Insets bottom="2" left="5" right="5" top="2" /> </padding>
+                    </Label>
+                    <Label alignment="CENTER" prefHeight="28.0" prefWidth="155.0" textAlignment="RIGHT">
+                        <text>Green Threshold</text>
+                        <padding> <Insets bottom="2" left="5" right="5" top="2" /> </padding>
+                    </Label>
+                    <Label alignment="CENTER" prefHeight="28.0" prefWidth="175.0" textAlignment="RIGHT">
+                        <text>Yellow Threshold</text>
+                        <padding> <Insets bottom="2" left="5" right="5" top="2" /> </padding>
+                    </Label>
+                    <Label alignment="CENTER" prefHeight="28.0" prefWidth="125.0" textAlignment="RIGHT">
+                        <text>Red Threshold</text>
+                        <padding> <Insets bottom="2" left="5" right="5" top="2" /> </padding>
+                    </Label>
+                    <Label alignment="CENTER" prefHeight="28.0" prefWidth="180.0" textAlignment="RIGHT">
+                        <text>Maximum</text>
+                        <padding> <Insets bottom="2" left="5" right="5" top="2" /> </padding>
+                    </Label>
+                </HBox>
             </VBox>
         </top>
         <center>
