--- a/src/main/resources/dronetelemetrytool/fxml/inputsSelector_view.fxml
+++ b/src/main/resources/dronetelemetrytool/fxml/inputsSelector_view.fxml
@@ -11,6 +11,8 @@
 
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
+<?import eu.hansolo.tilesfx.tools.FlowGridPane?>
+
 <VBox alignment="CENTER" prefHeight="509.0" prefWidth="697.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="dronetelemetrytool.fxml.InputsSelector">
     <stylesheets>
         <URL value="@DTT_Style.css" />
@@ -23,14 +25,16 @@
     </Label>
 <!--   <BorderPane prefHeight="65.0" prefWidth="657.0" />-->
     <HBox alignment="CENTER">
-        <TextField editable="false" focusTraversable="false" text="Hey" fx:id="CSVaddress" prefWidth="310"/>
+        <TextField editable="false" disable="true" text="Hey" fx:id="CSVaddress" prefWidth="500"/>
         <Region prefWidth="10" />
         <Button onAction="#onCSVClick" text="Select CSV" prefWidth="110"/>
     </HBox>
     <HBox alignment="CENTER">
-        <TextField editable="false" focusTraversable="false" text="Hey" fx:id="VIDEOaddress" prefWidth="310"/>
+        <TextField editable="false" disable="true" text="Hey" fx:id="VIDEOaddress" prefWidth="500"/>
         <Region prefWidth="10" />
         <Button onAction="#onVideoClick" text="Select Video" prefWidth="110"/>
     </HBox>
+    
+    <FlowGridPane fx:id="Fields"/>
 
 </VBox>
