--- a/src/main/resources/dronetelemetrytool/fxml/frequencySelector_view.fxml
+++ b/src/main/resources/dronetelemetrytool/fxml/frequencySelector_view.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
+<?import javafx.scene.shape.Line?>
 <BorderPane prefHeight="509.0" prefWidth="697.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="dronetelemetrytool.fxml.FrequencySelector">
     <stylesheets>
         <URL value="@DTT_Style.css" />
@@ -15,34 +16,47 @@
         <VBox alignment="CENTER">
             <Label styleClass="header2" text="Frequency Selection"/>
             <Label styleClass="subtitle" text="Select a timestamp field, or determine your own frequency"/>
+            <Label styleClass="subtitle" text="Used to update data gauges during playback"/>
         </VBox>
     </top>
     <center>
-        <HBox>
-            <VBox alignment="CENTER">
-                <ListView fx:id="listView"/>
-            </VBox>
-            <VBox alignment="CENTER">
-                <HBox alignment="CENTER">
+        <VBox alignment="CENTER">
+            <HBox alignment="CENTER" >
+                <VBox alignment="CENTER">
                     <padding>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                     </padding>
-                    <TextField fx:id="frequencyINPUT" prefWidth="100"/>
-                    <Region prefWidth="10" />
-                    <Button onAction="#onCSVClick" text="Select CSV" prefWidth="110"/>
-                </HBox>
-            </VBox>
-        </HBox>
+                    <ListView fx:id="listView" prefWidth="200"/>
+                </VBox>
+                <Line startY="0" endY="-400"/>
+                <VBox alignment="CENTER">
+                    <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                    </padding>
+                    <TextField fx:id="frequencyINPUT" prefWidth="200"/>
+                </VBox>
+            </HBox>
+
+            <HBox alignment="CENTER">
+                <padding>
+                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                </padding>
+                <Button onAction="#onSelectFreqClick" text="Use Selected Frequency" prefWidth="200" />
+                <Region prefWidth="50" />
+                <Button onAction="#onCustomFreqClick" text="Use Custom Frequency" prefWidth="200"/>
+            </HBox>
+        </VBox>
+
     </center>
     <bottom>
-        <ButtonBar>
-            <padding>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-            </padding>
-            <buttons>
-                <Button fx:id="continueButton" onAction="#onContinueClick" text="Continue" prefWidth="110" ButtonBar.buttonData="RIGHT"/>
-            </buttons>
-        </ButtonBar>
+<!--        <ButtonBar>-->
+<!--            <padding>-->
+<!--                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />-->
+<!--            </padding>-->
+<!--            <buttons>-->
+<!--                <Button fx:id="continueButton" onAction="#onContinueClick" text="Continue" prefWidth="110" ButtonBar.buttonData="RIGHT"/>-->
+<!--            </buttons>-->
+<!--        </ButtonBar>-->
 
     </bottom>
 
