--- a/src/main/resources/dronetelemetrytool/fxml/circle90GaugeCreator_view.fxml
+++ b/src/main/resources/dronetelemetrytool/fxml/circle90GaugeCreator_view.fxml
@@ -39,7 +39,7 @@
         <HBox>
             <padding> <Insets bottom="10" left="10" right="10" top="10" /> </padding>
             <Label text="Unit Type" prefWidth="175"/>
-            <ComboBox fx:id="unitTypeComboBox"/>
+            <ComboBox fx:id="unitTypeComboBox" onAction="#onNewUnitType"/>
         </HBox>
         <HBox>
             <padding> <Insets bottom="10" left="10" right="10" top="10" /> </padding>
